@@ -1,3 +1,15 @@
+2004-02-05  Christian Ruppert <arc@users.sf.net>
+	* po/it.po, configure.in: added italian language support. Many thanks
+	  to Diego Bertone.
+
+2004-01-27  Christian Ruppert <arc@users.sf.net>
+	* uwm/init.c, uwm/init.h, uwm/settings.h: preliminary completion of
+	  event data structures.
+
+2004-01-25  Christian Ruppert <arc@users.sf.net>
+	* uwm/settings.h: preliminary data structure implementation for user
+	  event database.
+
 2004-01-14  Christian Ruppert <arc@users.sf.net>
 	* uwm/special.c (CheckCPP): fixed a bug in the new cpp check.
 	* uwm/settings.h: defined some types (still empty).
